Fixed height and overflow of conversation layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,6 +58,20 @@
   opacity: 0;
 }
 
-html, body, #root, #root>div:first-child{
+/* html, body, #root, #root>div:first-child{
   height: 100%
+} */
+
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column
 }
